# fortiosclient

./: .gitignore  .gitreview  .testr.conf  README.rst  requirements.txt  setup.cfg  tox.ini
fortiosclient/: __init__.py  base.py  client.py  eventlet_client.py  eventlet_request.py  exception.py  request.py  templates.py
fortiosclient/common/: constants.py  resources.py
fortiosclient/tests/unit/api_client/: test_api_eventlet_request.py  test_client.py
