[metadata]
name = fortiosclient
summary = a python client based on fortios restful api
description_file =
    README.rst
author = Fortinet
author_email = openstack-ci@fortinet.com
home_page = http://www.fortinet.com
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    fortiosclient

[global]
setup_hooks =
    pbr.hooks.setup_hook

[wheel]
universal = 1
